java9: Use Class.getConstructor().newInstance()
Class.newInstance() is deprecated.